Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           <h1>
 <a id="sassqueries" class="anchor" href="#sassqueries" aria-hidden="true"><span class="octicon octicon-link"></span></a>SassQueries</h1>
 
-<p>Manage media-queries in Sass easily.</p>
+<p><img src="https://raw.githubusercontent.com/zessx/sass-queries/master/sass-queries.png" alt="SassQueries"><br>
+Manage media-queries in Sass easily.</p>
 
 <h2>
 <a id="configuration" class="anchor" href="#configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configuration</h2>
@@ -65,7 +66,9 @@ $sq-debug: false;
 
 <p>SassQueries comes with a unique mixin: <code>media()</code>, which allows you to target a starting/ending breakpoint, to specify a media type, and even to add custom options.</p>
 
+<blockquote>
 <p>Keep in mind everything works in a mobile-first way. </p>
+</blockquote>
 
 <pre><code>.selector {
   @media($from: tablet) {
