--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Manage media-queries in Sass easily.</p>
 <p>You can fully configurate SassQueries thanks to a bunch of variables prefixed with <code>$sq-</code>.<br>
 SassQueries provides default values for these variable, so you just have to put the one you need in your <code>variables.scss</code> file:</p>
 
-<pre><code>// Set your mobile-first breakpoints: label / min-width
+<pre><code>// Set your breakpoints: label / min-width
 $sq-breakpoints: (
     mobile:    320px,
     tablet:    768px,
@@ -59,16 +59,14 @@ $sq-breakpoints: (
 $sq-media: "all";
 // Enable (or not) a small tag displaying your current breakpoint
 $sq-debug: false;
+// Use mobile first or not
+$sq-mobile-first: true;
 </code></pre>
 
 <h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
 <p>SassQueries comes with a unique mixin: <code>media()</code>, which allows you to target a starting/ending breakpoint, to specify a media type, and even to add custom options.</p>
-
-<blockquote>
-<p>Keep in mind everything works in a mobile-first way. </p>
-</blockquote>
 
 <pre><code>.selector {
   @media($from: tablet) {
@@ -88,6 +86,17 @@ $sq-debug: false;
   }
 }
 </code></pre>
+
+<h2>
+<a id="todo" class="anchor" href="#todo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Todo</h2>
+
+<ul>
+<li>[x] Use default values</li>
+<li>[x] Display debug tooltip</li>
+<li>[x] Add mobile-first option</li>
+<li>[ ] Sort <code>$sq-breakpoints</code> map depending of <code>$sq-mobile-first</code>
+</li>
+</ul>
         </section>
 
         <footer>
